[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Kai Schmidt <kaikaliischmidt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
narwhalol = "*"
rql = "*"
